fix: aligned image and title

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 h1 {
   font-size: 1.5em;
   line-height: 1.1;
-  margin-top: 125px;
+  padding-top: 115px;
 }
 
 #app {
@@ -42,8 +42,12 @@ h1 {
   height: 600px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
   border: 3px solid white;
+}
+
+img {
+  position: relative;
+  bottom: 20px;
 }
 
 #app-1 {
